# Log

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appender.cc  appender.h  color.cc  color.h  event.cc  event.h  format.sh  formatter.cc  layout.cc  layout.h  laytou.cc  level.cc  log_inl.h  log_manager.cc  log_manager.h  logger.cc  logger.h  main.cc  rein_logConfig.cmake.in  util.hpp
examples/: CMakeLists.txt  basic_usage.cc
include/log/: appender.h  event.h  formatter.h  layout.h  level.h  log_constants.h  log_macros.h  log_manager.h  logger.h  logging.h  util.hpp
src/: appender.cc  color.cc  event.cc  formatter.cc  layout.cc  level.cc  log_manager.cc  logger.cc  main.cc
